tools/build/resources/ZeroCM/zcm/zcm.h

/* Return codes */
enum zcm_return_codes {
    #define X(n, v, s) n = v,
    ZCM_RETURN_CODES
    #undef X
};
typedef struct zcm_t          zcm_t;
typedef struct zcm_sub_t      zcm_sub_t;
/* Generic message handler function type */
typedef void (*zcm_msg_handler_t)(const zcm_recv_buf_t* rbuf,
                                  const char* channel, void* usr);
/* Note: some language bindings depend on the specific memory layout
 *       of ZCM structures. If you change these, be sure to update
 *       language bindings to match. */

/* Primary ZCM object that handles all top-level interactions including
   delegation between blocking and non-blocking interfaces */
struct zcm_t
{
    enum zcm_type type;
    void*         impl;
};
zcm_t* zcm_create(const char* url);
void   zcm_destroy(zcm_t* zcm);
/* Returns the error string from the error number */
const char* zcm_strerrno(int err);
/* Publish a zcm message buffer. Note: the message may not be completely
   sent after this call has returned. To block until the messages are transmitted,
   call the zcm_flush() method.
   Returns ZCM_EOK on success, error code on failure */
int zcm_publish(zcm_t* zcm, const char* channel, const uint8_t* data, uint32_t len);
void zcm_start(zcm_t* zcm);
void zcm_pause(zcm_t* zcm); /* pauses message dispatch and publishing, not transport */
void zcm_resume(zcm_t* zcm);
int  zcm_handle(zcm_t* zcm); /* returns ZCM_EOK normally, error code on failure. */
/* Write topology file to filename. Returns ZCM_EOK normally, error code on failure */
int zcm_write_topology(zcm_t* zcm, const char* name);
/* Non-Blocking Mode Only: Functions checking and dispatching messages
   Returns ZCM_EOK if a message was dispatched, ZCM_EAGAIN if no messages,
   error code otherwise */
int zcm_handle_nonblock(zcm_t* zcm);
/****************************************************************************/
/*    NOT FOR GENERAL USE. USED FOR LANGUAGE-SPECIFIC BINDINGS WITH VERY    */
/*                     SPECIFIC THREADING CONSTRAINTS                       */
/****************************************************************************/
/* Subscribe to zcm messages
   Returns a subscription object on success, and NULL on failure.
   Can fail to subscribe if zcm is already running */
zcm_sub_t* zcm_try_subscribe(zcm_t* zcm, const char* channel, zcm_msg_handler_t cb, void* usr);
/* Unsubscribe to zcm messages, freeing the subscription object
   Returns ZCM_EOK on success, error code on failure
   Can fail to subscribe if zcm is already running */
int zcm_try_unsubscribe(zcm_t* zcm, zcm_sub_t* sub);
/* Nonblocking version of flush (ZCM_EAGAIN if fail, ZCM_EOK if success) as defined
   above. If you want to guarantee that this function returns ZCM_EOK at some point,
   you should zcm_pause() first. */
int zcm_try_flush(zcm_t* zcm);
int zcm_try_stop(zcm_t* zcm); /* returns ZCM_EOK on success, error code on failure */
int zcm_try_set_queue_size(zcm_t* zcm, uint32_t numMsgs); /* returns ZCM_EOK or ZCM_EAGAIN */