tools/build/resources/ZeroCM/zcm/zcm-cpp.hpp

class Subscription;
struct LogEvent
{
    int64_t     eventnum;
    int64_t     timestamp;
    std::string channel;
    int32_t     datalen;
    uint8_t*       data;
};
struct LogFile
{
    /**** Methods for ctor/dtor/check ****/
    inline LogFile(const std::string& path, const std::string& mode);
    inline ~LogFile();
    inline bool good() const;
    inline void close();

    /**** Methods general operations ****/
    inline int seekToTimestamp(int64_t timestamp);
    inline FILE* getFilePtr();

    /**** Methods for read/write ****/
    // NOTE: user should NOT hold-onto the returned ptr across successive calls
    inline const LogEvent* readNextEvent();
    inline const LogEvent* readPrevEvent();
    inline const LogEvent* readEventAtOffset(off_t offset);
    inline int             writeEvent(const LogEvent* event);

  private:
    inline const LogEvent* cplusplusIfyEvent(zcm_eventlog_event_t* le);
    LogEvent curEvent;
    zcm_eventlog_t* eventlog;
    zcm_eventlog_event_t* lastevent;
};